force-app/main/default/objects/C360_ContractLineItem__c.object
<CustomObject>
    <fields>
        <fullName>ContractFormNo__c</fullName>
        <label>Contract Form No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <formula>Contract__r.ContractNumber__c</formula>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractVolumeUOM__c</fullName>
        <label>Contract Volume UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractVolume__c</fullName>
        <label>Contract Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>C360_Contract__c</referenceTo>
        <relationshipLabel>Contract Line Item</relationshipLabel>
        <relationshipName>Contract_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <formula>Text(Contract__r.DistributionChannel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeVolumeUOM__c</fullName>
        <label>Free Volume UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FreeVolume__c</fullName>
        <label>Free Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeyReport__c</fullName>
        <description>Use for TPX Labix Report</description>
        <formula>IF( OR(ISPICKVAL(Contract__r.SalesOrganization__c, &apos;1300&apos;),ISPICKVAL(Contract__r.SalesOrganization__c, &apos;1700&apos;)) ,
TEXT(Contract__r.SalesOrganization__c) &amp;&quot;_&quot;&amp;
TEXT(Contract__r.DistributionChannel__c) &amp;&quot;_&quot;&amp;
Contract__r.SoldTo__r.AccountNumber__c &amp;&quot;_&quot;&amp;
Product__r.MaterialCode__c &amp;&quot;_&quot;&amp;
TEXT(ContractVolumeUOM__c),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LoadingEndDate__c</fullName>
        <label>Loading End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoadingStartDate__c</fullName>
        <label>Loading Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaximumVolume__c</fullName>
        <label>Maximum Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumPrice__c</fullName>
        <label>Minimum Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumVolumeUOM__c</fullName>
        <label>Minimum Volume UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MinimumVolume__c</fullName>
        <label>Minimum Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderQuantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PricingUnit__c</fullName>
        <label>Pricing Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PricingUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductGroupReport__c</fullName>
        <formula>IF(CONTAINS(Product__r.MaterialCode__c, &apos;HAB&apos;) , &apos;HAB&apos;,
IF(CONTAINS(Product__r.MaterialCode__c, &apos;150EX&apos;) , &apos;150EX&apos;,
IF(CONTAINS(Product__r.MaterialCode__c, &apos;500EX&apos;) , &apos;500EX&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;BSEX&apos;) , &apos;BSEX&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150SW&apos;) , &apos;150SW&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;500SW&apos;) , &apos;500SW&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;BSSW&apos;) , &apos;BSSW&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;TDATE&apos;) ,&apos;TDATE&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;TRAE&apos;) , &apos;TRAE&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;MES&apos;) , &apos;MES&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;LAB&apos;) , &apos;LAB&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150SN&apos;) , &apos;150SN&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;500SN&apos;) , &apos;500SN&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;150BS&apos;) , &apos;150BS&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;YBIT&apos;) , &apos;Bitumen&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;Raf&apos;) , &apos;Raffinate&apos;,
IF( CONTAINS(Product__r.MaterialCode__c, &apos;BZ&apos;) , &apos;BZ&apos;,
IF( CONTAINS( Product__r.Name , &apos;PX&apos;) , &apos;PX&apos;,
Null))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>C360_Product__c.DeletionMark__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Contract Line Item</relationshipLabel>
        <relationshipName>Contract_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RejectStatus__c</fullName>
        <label>Reject Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesDocumentItem__c</fullName>
        <label>Sales Document Item</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesUnit__c</fullName>
        <label>Sales Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship-To Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Line Item (Ship-To)</relationshipLabel>
        <relationshipName>Contract_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VolumeAllocationMTConversion__c</fullName>
        <description>Use for TPX Labix report</description>
        <label>Volume Allocation (MT) Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeAllocationMTReport__c</fullName>
        <formula>IF( ISPICKVAL( ContractVolumeUOM__c , &apos;MT&apos;) , 
ContractVolume__c , 
VolumeAllocationMTConversion__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Allocation (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeLiftingMTReport__c</fullName>
        <description>Use only in TPX Labix report</description>
        <label>Volume Lifting (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeRangeTo__c</fullName>
        <label>Volume Range To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VolumeRangeUOM__c</fullName>
        <label>Volume Range UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VolumeRange__c</fullName>
        <label>Volume Range From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>SFCTI{0000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>